--- a/snu/noticias/templates/noticias/home.html
+++ b/snu/noticias/templates/noticias/home.html
@@ -14,18 +14,25 @@
         </div>
         <div class="row">
           <div class="col-lg-4 aside">
-            <div class="row">
-              <div class="col-sm-4 col-lg-12">                
-                <img src="http://placehold.it/300x200" alt="" class="img-thumbnail">
+              <div class="row">
+                <div class="col-sm-4 col-lg-12">                
+                  <img src="http://placehold.it/300x200" alt="" class="img-thumbnail">
+                </div>
+                <div class="col-sm-8 col-lg-12">            
+                  <h4>Lorem ipsum dolor sit amet</h4>
+                  <p class="text-justify">Consectetur adipisicing elit. Nisi molestias voluptatum vitae debitis voluptatibus magni perspiciatis voluptate laboriosam, totam reiciendis? Facere accusamus delectus fuga ipsum veritatis consectetur excepturi magni omnis.</p>
+                </div>
               </div>
-              <div class="col-sm-8 col-lg-12">            
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <p class="text-justify">Consectetur adipisicing elit. Nisi molestias voluptatum vitae debitis voluptatibus magni perspiciatis voluptate laboriosam, totam reiciendis? Facere accusamus delectus fuga ipsum veritatis consectetur excepturi magni omnis.</p>
-              </div>
-            </div>
-          </div>
+          </div>        
           <div class="col-lg-8">
             <div class="row">
+              {% for noticia in all_noticia %}
+                <div class="col-xs-6 col-sm-4">
+                  <img src="{{noticia.imagen.url}}" alt="" class="img-responsive img-thumbnail">
+                  <p><a href="noticia_detalle.html">{{noticia.titulo}} </a></p>
+                  <p><span class="label label-info">{{noticia.categoria}}</span></p>
+                </div>        
+              {% endfor %}
               <div class="col-xs-6 col-sm-4">
                 <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
                 <p><a href="noticia_detalle.html">Consectetur adipisicing elit. </a></p>
