--- a/snu/noticias/templates/noticias/home.html
+++ b/snu/noticias/templates/noticias/home.html
@@ -1,6 +1,5 @@
 {% extends "noticias/base.html" %}
 {% block title %} Home {% endblock %}
-
 {% block content %}
 
   <section>
@@ -15,13 +14,15 @@
         <div class="row">
           <div class="col-lg-4 aside">
               <div class="row">
-                <div class="col-sm-4 col-lg-12">                
-                  <img src="http://placehold.it/300x200" alt="" class="img-thumbnail">
-                </div>
-                <div class="col-sm-8 col-lg-12">            
-                  <h4>Lorem ipsum dolor sit amet</h4>
-                  <p class="text-justify">Consectetur adipisicing elit. Nisi molestias voluptatum vitae debitis voluptatibus magni perspiciatis voluptate laboriosam, totam reiciendis? Facere accusamus delectus fuga ipsum veritatis consectetur excepturi magni omnis.</p>
-                </div>
+                 {% for d in destacada %}                  
+                    <div class="col-sm-4 col-lg-12">                
+                      <img src="{{d.imagen.url}}" alt="" class="img-thumbnail">
+                    </div>
+                    <div class="col-sm-8 col-lg-12">          
+                      <h4>{{d.titulo}}</h4>
+                      <p class="text-justify">{{d.contenido}}</p>
+                    </div>
+                 {% endfor %}  
               </div>
           </div>        
           <div class="col-lg-8">
@@ -29,41 +30,10 @@
               {% for noticia in all_noticia %}
                 <div class="col-xs-6 col-sm-4">
                   <img src="{{noticia.imagen.url}}" alt="" class="img-responsive img-thumbnail">
-                  <p><a href="noticia_detalle.html">{{noticia.titulo}} </a></p>
+                  <p><a href="{% url 'noticias:detalle' %}?id={{noticia.id}}">{{noticia.titulo}} </a></p>
                   <p><span class="label label-info">{{noticia.categoria}}</span></p>
                 </div>        
-              {% endfor %}
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Consectetur adipisicing elit. </a></p>
-                <p><span class="label label-info">Noticias</span></p>
-              </div>
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Nisi molestias voluptatum vitae </a></p>
-                <p><span class="label label-info">Educación</span></p>
-              </div>
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Voluptatum vitae debitis voluptatibus</a></p>
-                <p><span class="label label-info">Noticias</span></p>
-              </div>              
-
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Molestias voluptatum vitae debitis</a></p>
-                <p><span class="label label-info">Educación</span></p>
-              </div>
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Nisi molestias voluptatum</a></p>
-                <p><span class="label label-info">Educación</span></p>
-              </div>
-              <div class="col-xs-6 col-sm-4">
-                <img src="http://placehold.it/500x300" alt="" class="img-responsive img-thumbnail">
-                <p><a href="noticia_detalle.html">Voluptatibus consectetur adipisicing elit</a></p>
-                <p><span class="label label-info">Educación</span></p>
-              </div>              
+              {% endfor %}           
             </div>
           </div>
         </div>
