--- a/snu/noticias/templates/noticias/noticia_detalle.html
+++ b/snu/noticias/templates/noticias/noticia_detalle.html
@@ -1,13 +1,15 @@
 {% extends "noticias/base.html" %}
 {% block title %} Noticia {% endblock %}
-
 {% block content %}
+{% load thumbnail %}
   <section>
     <div class="container">
       <div class="col-lg-12">
         <h1>{{noticia.titulo}} <small>{{noticia.categoria}}</small></h1>
         <p><em>Fecha publicación: {{noticia.fecha}}</em></p>
-        <img src="{{noticia.imagen.url}}" alt="" class="img-responsive img-thumbnail pull-left img-margin-right">
+        {% thumbnail noticia.imagen "200x200" crop="center" as im %} 
+          <img src="{{im.url}}" alt=" {{noticia.titulo}}" class="img-responsive img-thumbnail pull-left img-margin-right">
+        {% endthumbnail %}
         {{noticia.contenido}}          
       </div>
 
